--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Roboto+Condensed&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -208,10 +209,81 @@
            <p class="benefits__text">
             Посмотрите видео презентацию нашего сервиса и выберите автомобиль уже сейчас!
            </p>
-           <a class="video-popup" href="#">
+           <a class="video-popup" data-fancybox href="https://www.youtube.com/watch?v=SmPdGI0kJHc">
             ПОСМОТРЕТЬ <br>
             ПРЕЗЕНТАЦИЮ
           </a>
+         </div>
+       </div>
+     </div>
+   </section>
+   <section class="reviews">
+     <div class="container">
+       <h3 class="reviews__title">
+        Отзывы
+       </h3>
+       <div class="reviews__slider">
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Михаил, 28 лет
+           </p>
+           <p class="reviews__item-text">
+            Очень рад, что Вы есть!
+            Пока еще бэху купить не могу, но покататься взять - это отличная возможность!
+            Такое ощущение, что у меня личный огромный автопарк элитных тачек)))            
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Инна, 35 лет
+           </p>
+           <p class="reviews__item-text">
+            Очень радует Ваш сервис. Встречаю ВИП клиентов всегда только на Ваших машинах.
+            Удобно, что расчет по минутам, это экономит бюджет компании.            
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Игорь, 25 лет
+           </p>
+           <p class="reviews__item-text">
+            Ребята, Вы ТОПЧИК!
+            Брал машину на свидание, покатал девушку, она в восторге, я доволен, все счастливы)            
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Марина, 30 лет
+           </p>
+           <p class="reviews__item-text">
+            Люблю Ваш сервис. Не люблю такси. В приложении быстро нахожу машину поблизости. Всегда чистая, свежая, приятно садиться в нее. До работы или на шопинг еду с комфортом. 
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Инна, 35 лет
+           </p>
+           <p class="reviews__item-text">
+            Очень радует Ваш сервис. Встречаю ВИП клиентов всегда только на Ваших машинах.
+            Удобно, что расчет по минутам, это экономит бюджет компании.            
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Игорь, 25 лет
+           </p>
+           <p class="reviews__item-text">
+            Ребята, Вы ТОПЧИК!
+            Брал машину на свидание, покатал девушку, она в восторге, я доволен, все счастливы)            
+           </p>
+         </div>
+         <div class="reviews__item">
+           <p class="reviews__item-name">
+            Марина, 30 лет
+           </p>
+           <p class="reviews__item-text">
+            Люблю Ваш сервис. Не люблю такси. В приложении быстро нахожу машину поблизости. Всегда чистая, свежая, приятно садиться в нее. До работы или на шопинг еду с комфортом. 
+           </p>
          </div>
        </div>
      </div>
@@ -220,6 +292,7 @@
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
